--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,13 @@
             <version>2.5.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.10</version>
+            <scope>provided</scope>
+        </dependency>
+
+
     </dependencies>
 </project>
