public artefact with CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 on:
   workflow_dispatch:
   push:
-    branches: [ main ]
+    branches: [ master ]
 jobs:
   build-test-release:
     runs-on: ubuntu-latest
@@ -30,7 +30,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./target/scala-2.13/traviona-cloud-assembly-0.1.2.jar
+          asset_path: ./target/coingecko-java-1.0-SNAPSHOT.jar
           asset_name: traviona-cloud-${{ steps.release-name.outputs.name }}.jar
           asset_content_type: application/zip
       - uses: eregon/publish-release@v1
